--- a/src/components/bezier_curve_page/main_section_bc.css
+++ b/src/components/bezier_curve_page/main_section_bc.css
@@ -148,3 +148,39 @@ main {
   margin-block: auto;
   overflow: hidden;
 }
+
+@media (max-width: 1024px) {
+  main {
+    width: 100vw;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .bezier_curve_section {
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
+    margin-top: 40px;
+
+    .bezier_section_footer {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 40px;
+
+      .bezier_result_wrapper {
+        width: fit-content;
+        position: relative;
+        right: 0;
+
+        .arrow {
+          top: -18px;
+          left: 50%;
+          position: absolute;
+
+          transform: rotate(90deg) translate(-50%);
+        }
+      }
+    }
+  }
+}
